# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Includes dir
libitemincludedir = $(includedir)/

# Include files
# informar os .h separados por espaço
include_HEADERS = jogo.h mapa.h tempo.h aliado.h armadilha.h ataque.h botao.h desenhavel.h \
				  escutavel.h inimigo.h mutavel.h torre.h tela.h ambiente.h fading.h \
				  mestre.h wave.h util.h hud.h menuprincipal.h
